maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:3: error: not found: value prisnt
prisnt("hello") 
^