maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.code
override def run() {
}
prisnt("hello")